# aim_certification_challenge

./: README.md  agent.py  app.py  pyproject.toml  rag_evaluation.py  rag_utils.py  tool_utils.py
static/: index.html  script.js  styles.css
